--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -10,36 +10,66 @@
   </head>
   <body>
     <div class="container">
-      <div class="background">
-        <span>Go </span>
-        <a href="/">Home &rarr;</a><br />
-        <span>Don't have an account?</span>
-        <a class="signupBtn" href="/user/join">SIGN UP</a>
+      <div class="bg-container">
+        <div class="bg-circle"></div>
       </div>
-      <div class="login">
-        <h1>LOGIN</h1>
-        <span class="errorMessage"><%= errorMessage %></span>
-        <form method="post">
-          <div>
-            <input
-              type="text"
-              id="input_email"
-              placeholder="userID or email"
-              name="email"
-            />
+
+      <div class="form-container">
+        <div class="img-container">
+          <a href="/"
+            ><div>
+              <img src="../image/Brazuca - Cat 2.png" alt="" /></div
+          ></a>
+          <div class="img-circle"></div>
+        </div>
+        <div class="login">
+          <h1>LOGIN</h1>
+          <span class="errorMessage"><%= errorMessage %></span>
+          <form method="post">
+            <div>
+              <input
+                type="text"
+                id="input_email"
+                placeholder="email"
+                name="email"
+              />
+            </div>
+            <div>
+              <input
+                type="password"
+                id="input_password"
+                placeholder="password"
+                name="password"
+              />
+            </div>
+            <input type="submit" value="LOG IN" />
+          </form>
+          <footer>&copy; 2023 Petcare</footer>
+          <div class="or">
+            <div></div>
+            <span>OR</span>
+            <div></div>
           </div>
-          <div>
-            <input
-              type="password"
-              id="input_password"
-              placeholder="password"
-              name="password"
-            />
-          </div>
-          <input type="submit" value="LOG IN" />
-        </form>
-        <footer>&copy; 2023 Petcare</footer>
+          <dir class="footer-circle-container">
+            <div class="footer-circle">
+              <div class="footer-circle-hover footer-circle-home">
+                <span>HOME</span>
+              </div>
+              <a href="/"><i class="fa-solid fa-house"></i></a>
+            </div>
+            <div class="footer-circle">
+              <div class="footer-circle-hover footer-circle-signIn">
+                <span>SIGN UP</span>
+              </div>
+              <a href="join"><i class="fa-solid fa-right-to-bracket"></i></a>
+            </div>
+          </dir>
+        </div>
       </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/c47a47dbc9.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
