--- a/src/views/css/login.css
+++ b/src/views/css/login.css
@@ -1,13 +1,3 @@
-:root {
-  --purple: #706fd3;
-  --purple_white: #716fd367;
-  --purple-dark: #474787;
-  --yellow: #ffda79;
-  --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --gray: #d1ccc0;
-  --ff: "Montserrat", sans-serif;
-  --dark-gray: #84817a;
-}
 * {
   box-sizing: border-box;
   font-family: var(--ff);
@@ -167,4 +157,8 @@ i {
 }
 .footer-circle:hover .footer-circle-hover {
   opacity: 1;
+}
+
+.last-child {
+  width: 120px;
 }
