--- a/src/views/pet/view.ejs
+++ b/src/views/pet/view.ejs
@@ -4,44 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/root.css" />
     <link rel="stylesheet" href="../css/pet/view.css" />
     <title>Pet Care | <%= pageTitle %>></title>
   </head>
   <body>
     <header>
-      <h1>Pet List</h1>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/user/logout">Log out</a></li>
-          <li><a href="upload">upload Pet &rarr;</a></li>
+          <li><a href="/user/logout">LOG OUT</a></li>
+          <li><a href="/">PET CARE</a></li>
+          <li>
+            <a href="upload"
+              >UPLOAD PET <i class="fa-sharp fa-light fa-paw-simple"></i
+            ></a>
+          </li>
         </ul>
       </nav>
     </header>
-    <main class="grid-container">
+    <div class="bg-container">
+      <div class="bg-circle"></div>
+    </div>
+    <main class="flex-container">
       <% if(pets != null){ %> <% for(var i=0; i < pets.length; i++) { %>
       <div class="container">
-        <h3><%= pets[i].name %></h3>
-        <div class="img-container"><img src="/<%= pets[i].avatarUrl%>" /></div>
-        <ul>
-          <li>나이: <%= pets[i].age%></li>
-          <% if(pets[i].age =="") {%>
-          <li>생일: <%= pets[i].birth%></li>
-          <%}%>
-          <li>종: <%= pets[i].type.value%></li>
-          <li>세부사항: <%= pets[i].type.details%></li>
-          <li>특이사항:</li>
+        <div class="img-container">
+          <img src="/<%= pets[i].avatarUrl%>" />
+        </div>
+        <div class="pet-name">
+          <h3><%= pets[i].name %></h3>
+        </div>
+        <div class="index-container">
           <ul>
-            <% for(var j = 0; j< pets[i].introduce.length; j++) { %>
-            <li><%= pets[i].introduce[j] %></li>
-            <% } %>
+            <li>나이: <%= pets[i].age%></li>
+            <% if(pets[i].age =="") {%>
+            <li>생일: <%= pets[i].birth%></li>
+            <%}%>
+            <li>종: <%= pets[i].type.value%></li>
+            <li>세부사항: <%= pets[i].type.details%></li>
+            <li>특이사항:</li>
+            <ul>
+              <% for(var j = 0; j< pets[i].introduce.length; j++) { %>
+              <li><%= pets[i].introduce[j] %></li>
+              <% } %>
+            </ul>
+            <hr />
+            <div class="flex_container">
+              <a href="remove/<%= pets[i].id %>">pet delete &rarr;</a><br />
+              <a href="edit/<%= pets[i].id %>">pet Edit &rarr;</a>
+            </div>
           </ul>
-        </ul>
-        <hr />
-        <div class="flex_container">
-          <a href="remove/<%= pets[i].id %>">pet delete &rarr;</a><br />
-          <a href="edit/<%= pets[i].id %>">pet Edit &rarr;</a>
         </div>
       </div>
 
@@ -51,5 +64,6 @@
     </main>
     <hr />
     <footer>&copy; 2023 Petcare</footer>
+    <script src="../css/pet/js/view.js"></script>
   </body>
 </html>
