--- a/src/views/css/root.css
+++ b/src/views/css/root.css
@@ -4,7 +4,7 @@
   --purple-dark: #474787;
   --yellow: #ffda79;
   --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --gray: #d1ccc0;
+  --gray: #ece7db;
   --ff: "Montserrat", sans-serif;
   --dark-gray: #84817a;
 }
