--- a/src/views/user/changePassword.ejs
+++ b/src/views/user/changePassword.ejs
@@ -4,49 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
-    <link rel="stylesheet" href="../css/flex.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/root.css" />
+    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/changePassword.css" />
     <title>Pet Care | <%= pageTitle %></title>
   </head>
   <body>
-    <h1><%= pageTitle %></h1>
-    <span><%=errorMessage %></span>
-    <form action="" method="post">
-      <div>
-        <label for="input_password"
-          ><input
-            type="password"
-            id="input_password"
-            required
-            placeholder="Old Password"
-            name="oldPassword"
-        /></label>
+    <div class="container">
+      <div class="bg-container">
+        <div class="bg-circle"></div>
       </div>
-      <div>
-        <label for="input_password"
-          ><input
-            type="password"
-            id="input_password"
-            required
-            placeholder="New Password"
-            name="newPassword"
-        /></label>
+
+      <div class="form-container">
+        <div class="login">
+          <h1><%= pageTitle %></h1>
+          <span class="errorMessage"><%=errorMessage %></span>
+          <form method="post">
+            <div>
+              <label for="input_password"
+                ><input
+                  type="password"
+                  id="input_password"
+                  required
+                  placeholder="Old Password"
+                  name="oldPassword"
+              /></label>
+            </div>
+            <div>
+              <label for="input_password"
+                ><input
+                  type="password"
+                  id="input_password"
+                  required
+                  placeholder="New Password"
+                  name="newPassword"
+              /></label>
+            </div>
+            <div>
+              <label for="input_password"
+                ><input
+                  type="password"
+                  id="input_password"
+                  required
+                  placeholder="New Password Confirm"
+                  name="newPassword2"
+              /></label>
+            </div>
+            <input type="submit" value="UPDATE" />
+          </form>
+          <footer>&copy; 2023 Petcare</footer>
+          <div class="or">
+            <div></div>
+            <span>OR</span>
+            <div></div>
+          </div>
+          <dir class="footer-circle-container">
+            <a href="/">
+              <div class="footer-circle">
+                <div class="footer-circle-hover">
+                  <span>HOME</span>
+                </div>
+                <i class="fa-solid fa-house"></i>
+              </div>
+            </a>
+            <a href="/user/profile">
+              <div class="footer-circle">
+                <div class="footer-circle-hover">
+                  <span>PROFILE</span>
+                </div>
+                <i class="fa-solid fa-user"></i>
+              </div>
+            </a>
+          </dir>
+        </div>
       </div>
-      <div>
-        <label for="input_password"
-          ><input
-            type="password"
-            id="input_password"
-            required
-            placeholder="New Password Confirm"
-            name="newPassword2"
-        /></label>
-      </div>
-      <input type="submit" value="Update Profile" />
-      <hr />
-      <span>Go </span>
-      <a href="/">Home &rarr;</a><br />
-    </form>
-    <footer>&copy; 2023 Petcare</footer>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/c47a47dbc9.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
