--- a/src/views/family/family.ejs
+++ b/src/views/family/family.ejs
@@ -405,5 +405,6 @@
       <button id="updateButton">Update Event</button>
     </div>
     <a href="/">Home&rarr;</a>
+    <div id="familyPath"><span>URL: <%= loggedInUser.familyPath%></span></div>
   </body>
 </html>
